--- a/src/Sddl.Parser.Console/Sddl.Parser.Console.csproj
+++ b/src/Sddl.Parser.Console/Sddl.Parser.Console.csproj
@@ -1,11 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <Project Include="../../common.props" />
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="../Sddl.Parser/Sddl.Parser.csproj" />
   </ItemGroup>
+
 </Project>
