--- a/src/Sddl.Parser/Sddl.Parser.csproj
+++ b/src/Sddl.Parser/Sddl.Parser.csproj
@@ -1,5 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+
+  <ItemGroup>
+    <Project Include="../../common.props" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+
 </Project>
