--- a/test/Sddl.Parser.Tests/Sddl.Parser.Tests.csproj
+++ b/test/Sddl.Parser.Tests/Sddl.Parser.Tests.csproj
@@ -1,7 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <Project Include="../../common.props" />
+  </ItemGroup>
+
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
