--- a/src/Sddl.Parser/Sddl.Parser.csproj
+++ b/src/Sddl.Parser/Sddl.Parser.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <ItemGroup>
-    <Project Include="../../common.props" />
-  </ItemGroup>
+  <Import Project="../../common.props" />
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <AssemblyName>Sddl.Parser</AssemblyName>
+    <PackageId>Sddl.Parser</PackageId>
   </PropertyGroup>
 
 </Project>
