--- a/test/Sddl.Parser.Tests/Sddl.Parser.Tests.csproj
+++ b/test/Sddl.Parser.Tests/Sddl.Parser.Tests.csproj
@@ -1,8 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <ItemGroup>
-    <Project Include="../../common.props" />
-  </ItemGroup>
+  <Import Project="../../common.props" />
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
