--- a/common.props
+++ b/common.props
@@ -2,10 +2,10 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <!-- Modify this property alongside appveyor.yml version -->
-    <VersionPrefix>1.0.2</VersionPrefix>
+    <VersionPrefix>1.0.3</VersionPrefix>
     <Authors>zacateras</Authors>
     
-    <PackageTags>sddl;security</PackageTags>
+    <PackageTags>sddl;security-descriptor;access-control;windows</PackageTags>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/zacateras/sddl-parser</RepositoryUrl>
